# ksp-gateway

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
config/: default.toml
crates/gateway-cache/: Cargo.toml
crates/gateway-cache/src/: lib.rs
crates/gateway-cli/: Cargo.toml
crates/gateway-cli/src/: commands.rs  main.rs
crates/gateway-config/: Cargo.toml
crates/gateway-config/src/: lib.rs  loader.rs  schema.rs  watcher.rs
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: error.rs  lib.rs  request.rs  response.rs  traits.rs  types.rs
crates/gateway-dashboard/: Cargo.toml
crates/gateway-dashboard/src/: lib.rs  routes.rs  server.rs  templates.rs
crates/gateway-ksp/: Cargo.toml
crates/gateway-ksp/src/: codec.rs  lib.rs  listener.rs  router.rs  session.rs  tests.rs
crates/gateway-monitor/: Cargo.toml
crates/gateway-monitor/src/: health.rs  lib.rs  metrics.rs  tracing_init.rs
crates/gateway-pipeline-http/: Cargo.toml
crates/gateway-pipeline-http/src/: compression.rs  lib.rs  pipeline.rs  redirect.rs
crates/gateway-pipeline-ws/: Cargo.toml
crates/gateway-pipeline-ws/src/: frame.rs  lib.rs  pipeline.rs
crates/gateway-plugin/: Cargo.toml
crates/gateway-plugin/src/: chain.rs  lib.rs  registry.rs
crates/gateway-plugin/src/builtin/: headers.rs  logging.rs  metrics.rs  mod.rs
crates/gateway-resolver/: Cargo.toml
crates/gateway-resolver/src/: lib.rs  tests.rs
crates/gateway-router/: Cargo.toml
crates/gateway-router/src/: adapter.rs  connection.rs  lib.rs  planner.rs  pool.rs  tls.rs
crates/gateway-tests/: Cargo.toml  server.cert  server.key
crates/gateway-tests/src/: lib.rs
crates/gateway-tests/tests/: dashboard.rs  http_pipeline.rs  plugin_chain.rs  ws_pipeline.rs
