[workspace]
resolver = "3"
members = [
    "crates/gateway-core",
    "crates/gateway-plugin",
    "crates/gateway-resolver",
    "crates/gateway-router",
    "crates/gateway-pipeline-http",
    "crates/gateway-pipeline-ws",
    "crates/gateway-ksp",
    "crates/gateway-cache",
    "crates/gateway-config",
    "crates/gateway-monitor",
    "crates/gateway-dashboard",
    "crates/gateway-cli",
    "crates/gateway-tests",
]

[workspace.package]
version     = "0.1.0"
edition     = "2024"
license     = "MIT"
authors     = ["Kush"]
repository  = "https://github.com/Kush2272/ksp-gateway"
homepage    = "https://www.kspprotocol.dev"
keywords    = ["ksp", "gateway", "protocol", "proxy", "networking"]
categories  = ["network-programming", "web-programming"]

# ─── Shared dependency versions ────────────────────────────────────────────────

[workspace.dependencies]
# Async runtime
tokio           = { version = "1",    features = ["full"] }
tokio-util      = { version = "0.7",  features = ["codec", "io"] }

# HTTP client / server
hyper           = { version = "1",    features = ["full"] }
hyper-util      = { version = "0.1",  features = ["full"] }
http            = "1"
http-body-util  = "0.1"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# TLS
rustls                = { version = "0.23", default-features = false, features = ["ring"] }
rustls-native-certs   = "0.8"
rustls-pemfile        = "2"
tokio-rustls          = "0.26"

# HTTP/2
h2 = "0.4"

# Compression
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "zstd"] }

# DNS
hickory-resolver = { version = "0.24", features = ["tokio-runtime", "dns-over-https-rustls"] }

# Web framework (dashboard)
axum            = { version = "0.8", features = ["macros"] }
tower           = "0.5"
tower-http      = { version = "0.6", features = ["cors", "trace"] }

# Rate limiting
governor        = "0.6"
nonzero_ext     = "0.3"

# Metrics
prometheus      = { version = "0.13", features = ["process"] }

# Caching
moka            = { version = "0.12", features = ["future"] }

# Concurrency
dashmap         = "6"
crossbeam-channel = "0.5"
parking_lot     = "0.12"

# Serialization
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
toml            = "0.8"

# Bytes
bytes           = "1"

# Error handling
thiserror       = "2"
anyhow          = "1"

# Async traits
async-trait     = "0.1"

# Tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap            = { version = "4", features = ["derive", "color", "env"] }
clap_complete   = "4"

# Utilities
uuid            = { version = "1", features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
bytes-utils     = "0.1"
hex             = "0.4"
colored         = "2"
comfy-table     = "7"
indicatif       = "0.17"
notify          = { version = "7", features = ["serde"] }
once_cell       = "1"
pin-project     = "1"
futures         = "0.3"
futures-util    = "0.3"

# KSP protocol (from crates.io)
ksp-core        = "1.0.1"
ksp-client      = "1.0.1"
ksp-server      = "1.0.1"
ksp-crypto      = "1.0.1"
ksp-transport   = "1.0.1"

# Internal crates
gateway-core            = { path = "crates/gateway-core" }
gateway-plugin          = { path = "crates/gateway-plugin" }
gateway-resolver        = { path = "crates/gateway-resolver" }
gateway-router          = { path = "crates/gateway-router" }
gateway-pipeline-http   = { path = "crates/gateway-pipeline-http" }
gateway-pipeline-ws     = { path = "crates/gateway-pipeline-ws" }
gateway-ksp             = { path = "crates/gateway-ksp" }
gateway-cache           = { path = "crates/gateway-cache" }
gateway-config          = { path = "crates/gateway-config" }
gateway-monitor         = { path = "crates/gateway-monitor" }
gateway-dashboard       = { path = "crates/gateway-dashboard" }
