[package]
name        = "gateway-cache"
description = "In-memory LRU and disk cache for KSP Gateway"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
gateway-core.workspace   = true
gateway-config.workspace = true
async-trait.workspace    = true
thiserror.workspace      = true
tokio.workspace          = true
tracing.workspace        = true
moka.workspace           = true
serde.workspace          = true
serde_json.workspace     = true
bytes.workspace          = true
chrono.workspace         = true
