[package]
name        = "gateway-config"
description = "Configuration parsing, validation, and live-reload for KSP Gateway"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
gateway-core.workspace  = true
thiserror.workspace     = true
serde.workspace         = true
toml.workspace          = true
tracing.workspace       = true
notify.workspace        = true
tokio.workspace         = true
once_cell.workspace     = true
