[package]
name        = "gateway-core"
description = "Shared types, error definitions, newtypes, and core traits for KSP Gateway"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[dependencies]
thiserror.workspace   = true
bytes.workspace       = true
uuid.workspace        = true
serde.workspace       = true
serde_json.workspace  = true
chrono.workspace      = true
async-trait.workspace = true
http.workspace        = true
tokio.workspace       = true
tracing.workspace     = true
hyper.workspace       = true
http-body-util.workspace = true
