[package]
name        = "gateway-pipeline-ws"
description = "WebSocket pipeline for KSP Gateway"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
gateway-core.workspace     = true
gateway-plugin.workspace   = true
gateway-config.workspace   = true
async-trait.workspace      = true
thiserror.workspace        = true
tokio.workspace            = true
tracing.workspace          = true
bytes.workspace            = true
futures.workspace          = true
futures-util.workspace     = true
tokio-tungstenite.workspace = true
