[package]
name        = "gateway-plugin"
description = "Plugin trait, chain executor, and built-in plugins for KSP Gateway"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
gateway-core.workspace  = true
async-trait.workspace   = true
thiserror.workspace     = true
tracing.workspace       = true
serde.workspace         = true
serde_json.workspace    = true
tokio.workspace         = true
futures.workspace       = true
